# institutional-ea

./: .gitignore  HANDOFF.md  HANDOFF_10.md  HANDOFF_14.md  HANDOFF_15.md  HANDOFF_16.md  HANDOFF_20.md  HANDOFF_23.md  HANDOFF_28.md  HANDOFF_31.md  HANDOFF_38.md  HANDOFF_39.md  HANDOFF_41.md  HANDOFF_7.md  HANDOFF_9.md  README.md  pyproject.toml
scripts/: audit_h024_broker_symbol_specs.py  audit_h024_mt5_order_behavior.py  build_demo_automation_readiness_bridge_jsonl.py  build_h024_broker_metadata_preflight_jsonl.py  build_h024_broker_request_construction_readiness_packet_jsonl.py  build_h024_broker_request_draft_construction_approval_jsonl.py  build_h024_broker_request_draft_envelope_jsonl.py  build_h024_broker_request_draft_review_human_decision_jsonl.py  build_h024_broker_request_preview_construction_approval_jsonl.py  build_h024_broker_request_preview_envelope_jsonl.py  build_h024_demo_adapter_boundary_static_verifier_jsonl.py  build_h024_demo_adapter_implementation_approval_jsonl.py  build_h024_demo_adapter_intent_refusal_audit_jsonl.py  build_h024_demo_adapter_noop_transport_contract_jsonl.py  build_h024_demo_adapter_noop_use_approval_jsonl.py  build_h024_demo_adapter_noop_use_invocation_audit_jsonl.py  build_h024_demo_execution_adapter_design_jsonl.py  build_h024_demo_execution_adapter_skeleton_jsonl.py  build_h024_demo_order_canary_hard_controls_preflight_packet_jsonl.py  build_h024_demo_order_canary_human_approval_jsonl.py  build_h024_demo_order_canary_readiness_human_decision_jsonl.py  build_h024_demo_order_plan_jsonl.py  (+177 more)
tests/: test_atr.py  test_checksums.py  (+202 more)
(+442 files in other folders)
